Bug #39396 Maria: ha_maria.cc:2415: assertion in ha_maria::store_lock()
Submitted: 11 Sep 2008 15:54 Modified: 8 Jan 11:59
Reporter: Guilhem Bichot
Status: Closed
Category:Server: Maria Severity:S3 (Non-critical)
Version:6.0-bzr OS:Linux
Assigned to: Bugs System Target Version:
Triage: Triaged: D2 (Serious) / R1 (None/Negligible) / E2 (Low)

[11 Sep 2008 15:54] Guilhem Bichot
Description:
Happens with
./mtr --mem --mysqld=--default-storage-engine=maria multi_update  

How to repeat:
see description
[22 Oct 2008 18:13] Michael Widenius
I can't repeat this with the mysql-6.0-maria tree, so I have to assume this bug has either
been fixed in mysql-maria or it was fixed as part of the mysql-maria -> mysql-6.0-maria
merge.

It should be fixed in MySQL-6.0 when we merge the MySQL-6.0-maria tree into 6.0, which is
sheduled to happen very soon.
[23 Oct 2008 18:10] Michael Widenius
Found a way to repeat it; It's a timing issue when table locks fails in MySQL
[23 Oct 2008 18:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/56918

2747 Michael Widenius	2008-10-23
      Fix for Bug#39396 Maria: ha_maria.cc:2415: assertion in ha_maria::store_lock()
      - Problem was wrong cleanup of mysql_lock_tables() in MySQL 6.0
      Fixed bug in my_vsnprintf in handling of %lld and %llu
      Removed warnings about usage of depricated mysqld options in mysql-test-run
[23 Oct 2008 23:30] Michael Widenius
The problem was a bug in how aborting of locks was handled in mysql_lock_tables() that was
introduced during a recent "code cleanup".
The bug affects any storage engine; The reason it failed in Maria was because Maria has
more asserts than a normal storage engine to ensure that it's called properly.
Now pushed into MySQL-6.0-maria. Will be fixed in 6.0 as soon as MySQL-6.0-maria is merged
to MySQL-6.0.
[26 Oct 2008 23:20] Bugs System
Pushed into 6.0.8-alpha  (revid:monty@mysql.com-20081023162952-ugd9u9vcecvfi5fa) (version
source revid:monty@mysql.com-20081023162952-ugd9u9vcecvfi5fa) (pib:5)
[8 Jan 11:59] MC Brown
Internal only. No documentation needed.