Fix for Bug#39396 Maria: ha_maria.cc:2415: assertion in ha_maria::store_lock() - Problem was wrong cleanup of mysql_lock_tables() in MySQL 6.0 Fixed bug in my_vsnprintf in handling of %lld and %llu Removed warnings about usage of depricated mysqld options in mysql-test-run